// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`topicmessage validateConsensusTimestampParam tests Verify validateConsensusTimestampParam throws error for -1234567890.000000001 1`] = `
Array [
  "Invalid parameter: consensus_timestamp",
]
`;

exports[`topicmessage validateConsensusTimestampParam tests Verify validateConsensusTimestampParam throws error for abc 1`] = `
Array [
  "Invalid parameter: consensus_timestamp",
]
`;

exports[`topicmessage validateGetSequenceMessageParams tests Verify validateGetSequenceMessageParams throws error for -123 1`] = `
Array [
  "Invalid parameter: topic_id",
  "Invalid parameter: sequence_number",
]
`;

exports[`topicmessage validateGetSequenceMessageParams tests Verify validateGetSequenceMessageParams throws error for 123.0001 1`] = `
Array [
  "Invalid parameter: topic_id",
  "Invalid parameter: sequence_number",
]
`;

exports[`topicmessage validateGetSequenceMessageParams tests Verify validateGetSequenceMessageParams throws error for abc 1`] = `
Array [
  "Invalid parameter: topic_id",
  "Invalid parameter: sequence_number",
]
`;

exports[`topicmessage validateGetTopicMessagesParams tests Verify validateGetTopicMessagesParams throws error for -123 1`] = `
Array [
  "Invalid parameter: topic_id",
]
`;

exports[`topicmessage validateGetTopicMessagesParams tests Verify validateGetTopicMessagesParams throws error for 123.0001 1`] = `
Array [
  "Invalid parameter: topic_id",
]
`;

exports[`topicmessage validateGetTopicMessagesParams tests Verify validateGetTopicMessagesParams throws error for abc 1`] = `
Array [
  "Invalid parameter: topic_id",
]
`;
